--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api-design-v5",
+  "name": "api-design",
   "version": "1.0.0",
-  "description": "Habit Tracker API for Node.js course",
+  "description": "Habit Tracker API",
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
@@ -22,31 +22,31 @@
   "license": "ISC",
   "dependencies": {
     "@epic-web/remember": "^1.1.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "custom-env": "^2.0.6",
-    "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.44.4",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
-    "helmet": "^7.1.0",
-    "jose": "^6.0.12",
+    "helmet": "^8.1.0",
+    "jose": "^6.1.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "ts-node": "^10.9.2",
-    "zod": "^4.0.17"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.11.5",
-    "@types/supertest": "^6.0.2",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.19.13",
+    "@types/supertest": "^6.0.3",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.4",
-    "supertest": "^6.3.4",
-    "tsx": "^4.20.4",
+    "supertest": "^7.1.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
